--- a/config/config.cfg.example
+++ b/config/config.cfg.example
@@ -29,7 +29,7 @@ performance.threshold_ms = 5.0
 performance.log_metrics = true
 
 cache.type = "database"
-cache.database.path = "./cache//cache.db"
+cache.database.path = "./cache/cache.db"
 cache.database.compression = false
 cache.database.max_ttl = 0
 cache.percentiles = "0,10,20,30,40,50,60,70,80,90,95,100"
