--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,22 @@
 {
     "require": {
-        "psr/simple-cache": "^3.0"
+        "psr/simple-cache": "^3.0",
+        "vlucas/phpdotenv": "^5.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^10.0"
     },
     "autoload": {
         "psr-4": {
             "App\\": "app/"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "App\\Tests\\": "tests/"
+        }
+    },
+    "scripts": {
+        "test": "phpunit"
     }
 }
