--- a/config/config.cfg
+++ b/config/config.cfg
@@ -2,7 +2,7 @@
 ; GRAFANA_URL и GRAFANA_API_TOKEN имеют приоритет над INI (используйте ENV для секретов)
 log_file = "./logs/corridor.log"
 log_level = "DEBUG"
-grafana_url = ""
+grafana_url = "http://localhost:3000"
 grafana_api_token = ""
 scaleCorridor = false
 
