--- a/config/config.cfg
+++ b/config/config.cfg
@@ -1,16 +1,8 @@
 ; Основные настройки
-; GRAFANA_URL и GRAFANA_API_TOKEN имеют приоритет над INI (используйте ENV для секретов)
 log_file = "./logs/corridor.log"
 log_level = "DEBUG"
-grafana_url = "http://localhost:3000"
-grafana_api_token = ""
-scaleCorridor = false
 
-blacklist_datasource_ids = ceh9u3ymlpdz4b, ceptwsd7y2tj4d
-
-corrdor_params.type = "adaptive"
 corrdor_params.step = 1800
-corrdor_params.historical_period_days = 12.17
 corrdor_params.test_periods = "1m,5m,10m,30m,1h,6h,1d,7d,30d,60d"
 corrdor_params.fetch_timeout_sec = 30
 
@@ -20,12 +12,14 @@ corrdor_params.max_harmonics = 5
 corrdor_params.min_data_points = 10
 corrdor_params.min_amplitude = 0.001
 corrdor_params.min_corridor_width_factor = 0.001
+corrdor_params.min_corridor_stddev_factor = 0.1
 corrdor_params.use_common_trend = true
+corrdor_params.fallback_stddev_factor = 2.0
+corrdor_params.min_points_increment = 5
 corrdor_params.default_percentiles.duration = 75
 corrdor_params.default_percentiles.size = 75
 corrdor_params.default_percentiles.duration_multiplier = 1
 corrdor_params.default_percentiles.size_multiplier = 1
-corrdor_params.min_values_for_percentile = 10
 
 performance.enabled = true
 performance.threshold_ms = 5.0
