--- a/config/config.cfg
+++ b/config/config.cfg
@@ -3,7 +3,7 @@ log_file = "./logs/corridor.log"
 log_level = "DEBUG"
 
 corrdor_params.step = 1800
-corrdor_params.test_periods = "1m,5m,10m,30m,1h,6h,1d,7d,30d,60d"
+corrdor_params.test_periods = "1m,5m,10m,30m,1h,6h,1d,2d,7d,30d,60d"
 corrdor_params.fetch_timeout_sec = 30
 
 corrdor_params.window_size = 10
@@ -11,9 +11,8 @@ corrdor_params.margin_percent = 10
 corrdor_params.max_harmonics = 5
 corrdor_params.min_data_points = 5
 corrdor_params.min_amplitude = 0.001
-corrdor_params.min_corridor_width_factor = 0.001
-corrdor_params.min_corridor_stddev_factor = 0.05
 corrdor_params.use_common_trend = true
+corrdor_params.use_nudft = false
 corrdor_params.fallback_stddev_factor = 2.0
 corrdor_params.min_points_increment = 5
 
@@ -21,6 +20,10 @@ corrdor_params.default_percentiles.duration = 75
 corrdor_params.default_percentiles.size = 75
 corrdor_params.default_percentiles.duration_multiplier = 1
 corrdor_params.default_percentiles.size_multiplier = 1
+
+corrdor_params.enable_outlier_filter = true
+corrdor_params.lower_percentile = 10.0
+corrdor_params.upper_percentile = 90.0
 
 performance.enabled = true
 performance.threshold_ms = 5.0
