--- a/config/config.cfg
+++ b/config/config.cfg
@@ -3,10 +3,10 @@ log_file = "./logs/corridor.log"
 log_level = "DEBUG"
 
 corrdor_params.step = 1800
-corrdor_params.test_periods = "1m,5m,10m,30m,1h,6h,1d,2d,7d,30d,60d"
+corrdor_params.test_periods = "1m,5m,10m,30m,1h,6h,1d,2d,7d,30d"
 corrdor_params.fetch_timeout_sec = 30
 
-corrdor_params.window_size = 10
+corrdor_params.window_size = 8
 corrdor_params.margin_percent = 10
 corrdor_params.max_harmonics = 5
 corrdor_params.min_data_points = 5
@@ -22,8 +22,8 @@ corrdor_params.default_percentiles.duration_multiplier = 1
 corrdor_params.default_percentiles.size_multiplier = 1
 
 corrdor_params.enable_outlier_filter = true
-corrdor_params.lower_percentile = 10.0
-corrdor_params.upper_percentile = 90.0
+corrdor_params.lower_percentile = 2
+corrdor_params.upper_percentile = 98
 
 performance.enabled = true
 performance.threshold_ms = 5.0
@@ -38,4 +38,4 @@ cache.percentiles = "0,10,20,30,40,50,60,70,80,90,95,100"
 dashboard.show_metrics = "original,nodata,dft_lower,dft_upper,dft_range,anomaly_concern"
 
 timeout.cache_build = 300
-timeout.max_metrics = 10
+timeout.max_metrics = 100
