--- a/config/config.cfg
+++ b/config/config.cfg
@@ -39,3 +39,6 @@ dashboard.show_metrics = "original,nodata,dft_lower,dft_upper,dft_range,anomaly_
 
 timeout.cache_build = 300
 timeout.max_metrics = 100
+; Разрешенные IP-адреса
+allowed_ips.0 = 127.0.0.1
+allowed_ips.1 = 81.163.20.183
