--- a/config/config.cfg
+++ b/config/config.cfg
@@ -35,7 +35,7 @@ cache.database.compression = false
 cache.database.max_ttl = 86400
 cache.percentiles = "0,10,20,30,40,50,60,70,80,90,95,100"
 
-dashboard.show_metrics = "original,nodata,dft_lower,dft_upper,dft_range,anomaly_concern"
+dashboard.show_metrics = "original,nodata,dft_lower,dft_range,anomaly_concern"
 
 timeout.cache_build = 300
 timeout.max_metrics = 100
@@ -46,3 +46,4 @@ http.ssl_verify = false
 ; Разрешенные IP-адреса
 allowed_ips.0 = 127.0.0.1
 allowed_ips.1 = 81.163.20.183
+allowed_ips.2 = 192.168.1.158
