--- a/config/config.cfg
+++ b/config/config.cfg
@@ -6,7 +6,7 @@ corrdor_params.step = 1800
 corrdor_params.test_periods = "1m,5m,10m,30m,1h,6h,1d,2d,7d,30d"
 corrdor_params.fetch_timeout_sec = 30
 
-corrdor_params.window_size = 8
+corrdor_params.window_size = 10
 corrdor_params.margin_percent = 10
 corrdor_params.max_harmonics = 5
 corrdor_params.min_data_points = 5
@@ -22,8 +22,10 @@ corrdor_params.default_percentiles.duration_multiplier = 1
 corrdor_params.default_percentiles.size_multiplier = 1
 
 corrdor_params.enable_outlier_filter = true
-corrdor_params.lower_percentile = 2
-corrdor_params.upper_percentile = 98
+corrdor_params.lower_percentile = 3
+corrdor_params.upper_percentile = 3
+corrdor_params.dev_percentile_low = 0.495
+corrdor_params.dev_percentile_high = 0.505
 
 performance.enabled = true
 performance.threshold_ms = 5.0
@@ -32,7 +34,7 @@ performance.log_metrics = true
 cache.type = "database"
 cache.database.path = "./cache/cache.db"
 cache.database.compression = false
-cache.database.max_ttl = 86400
+;cache.database.max_ttl = 86400
 cache.percentiles = "0,10,20,30,40,50,60,70,80,90,95,100"
 
 dashboard.show_metrics = "original,nodata,dft_lower,dft_range,anomaly_concern"
@@ -47,3 +49,6 @@ http.ssl_verify = false
 allowed_ips.0 = 127.0.0.1
 allowed_ips.1 = 81.163.20.183
 allowed_ips.2 = 192.168.1.158
+
+; Настройки Grafana
+grafana.max_combinations = 1000
