--- a/config/config.cfg
+++ b/config/config.cfg
@@ -2,30 +2,30 @@
 log_file = "./logs/corridor.log"
 log_level = "DEBUG"
 
-corrdor_params.step = 1800
-corrdor_params.test_periods = "1m,5m,10m,30m,1h,6h,1d,2d,7d,30d"
-corrdor_params.fetch_timeout_sec = 30
+corridor_params.step = 1800
+corridor_params.test_periods = "1m,5m,10m,30m,1h,6h,1d,2d,7d,30d"
+corridor_params.fetch_timeout_sec = 30
 
-corrdor_params.window_size = 10
-corrdor_params.margin_percent = 10
-corrdor_params.max_harmonics = 5
-corrdor_params.min_data_points = 5
-corrdor_params.min_amplitude = 0.001
-corrdor_params.use_common_trend = true
-corrdor_params.use_nudft = false
-corrdor_params.fallback_stddev_factor = 2.0
-corrdor_params.min_points_increment = 5
+corridor_params.window_size = 10
+corridor_params.margin_percent = 10
+corridor_params.max_harmonics = 5
+corridor_params.min_data_points = 5
+corridor_params.min_amplitude = 0.001
+corridor_params.use_common_trend = true
+corridor_params.use_nudft = false
+corridor_params.fallback_stddev_factor = 2.0
+corridor_params.min_points_increment = 5
 
-corrdor_params.default_percentiles.duration = 75
-corrdor_params.default_percentiles.size = 75
-corrdor_params.default_percentiles.duration_multiplier = 1
-corrdor_params.default_percentiles.size_multiplier = 1
+corridor_params.default_percentiles.duration = 75
+corridor_params.default_percentiles.size = 75
+corridor_params.default_percentiles.duration_multiplier = 1
+corridor_params.default_percentiles.size_multiplier = 1
 
-corrdor_params.enable_outlier_filter = true
-corrdor_params.lower_percentile = 3
-corrdor_params.upper_percentile = 3
-corrdor_params.dev_percentile_low = 0.495
-corrdor_params.dev_percentile_high = 0.505
+corridor_params.enable_outlier_filter = true
+corridor_params.lower_percentile = 3
+corridor_params.upper_percentile = 3
+corridor_params.dev_percentile_low = 0.495
+corridor_params.dev_percentile_high = 0.505
 
 performance.enabled = true
 performance.threshold_ms = 5.0
