--- a/config/config.cfg
+++ b/config/config.cfg
@@ -24,6 +24,7 @@ corridor_params.default_percentiles.size_multiplier = 1
 corridor_params.enable_outlier_filter = true
 corridor_params.lower_percentile = 3
 corridor_params.upper_percentile = 3
+corridor_params.max_outlier_removal_percent = 50
 corridor_params.dev_percentile_low = 0.495
 corridor_params.dev_percentile_high = 0.505
 
