--- a/config/config.cfg
+++ b/config/config.cfg
@@ -3,7 +3,7 @@ log_file = "./logs/corridor.log"
 log_level = "DEBUG"
 
 corridor_params.step = 1800
-corridor_params.test_periods = "1m,5m,10m,30m,1h,6h,1d,2d,7d,30d"
+corridor_params.test_periods = "1m,5m,10m,30m,1h,6h,1d,2d,7d,30d,60d"
 corridor_params.fetch_timeout_sec = 30
 
 corridor_params.window_size = 10
@@ -12,7 +12,6 @@ corridor_params.max_harmonics = 5
 corridor_params.min_data_points = 5
 corridor_params.min_amplitude = 0.001
 corridor_params.use_common_trend = true
-corridor_params.use_nudft = false
 corridor_params.fallback_stddev_factor = 2.0
 corridor_params.min_points_increment = 5
 
@@ -22,9 +21,10 @@ corridor_params.default_percentiles.duration_multiplier = 1
 corridor_params.default_percentiles.size_multiplier = 1
 
 corridor_params.enable_outlier_filter = true
-corridor_params.lower_percentile = 3
-corridor_params.upper_percentile = 3
-corridor_params.max_outlier_removal_percent = 50
+corridor_params.lower_percentile = 5
+corridor_params.upper_percentile = 5
+corridor_params.max_outlier_removal_percent = 20
+corridor_params.age_weight_factor = 0.2
 corridor_params.dev_percentile_low = 0.495
 corridor_params.dev_percentile_high = 0.505
 
@@ -38,7 +38,7 @@ cache.database.compression = false
 ;cache.database.max_ttl = 86400
 cache.percentiles = "0,10,20,30,40,50,60,70,80,90,95,100"
 
-dashboard.show_metrics = "original,nodata,dft_lower,dft_range,anomaly_concern"
+dashboard.show_metrics = "original,original_filtered,nodata,dft_lower,dft_range,anomaly_concern"
 
 timeout.cache_build = 300
 timeout.max_metrics = 100
